--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"license": "MIT",
 
 	"require": {
-		"php": ">=7.4"
+		"php": ">=7.4",
+		"php-http/httplug": "^2.2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "9.*",
