--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 		"php-http/httplug": "^2.2.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "v1.8.0",
-		"phpunit/phpunit": "v9.5.21"
+		"phpstan/phpstan": "^v1.8",
+		"phpunit/phpunit": "^v9.5"
 	},
 
 	"autoload": {
