--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
 	"license": "MIT",
 
 	"require": {
-		"php": ">=7.4",
+		"php": ">=8.1",
 		"php-http/httplug": "^2.2.0"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "^v1.8",
-		"phpunit/phpunit": "^v9.5"
+		"phpstan/phpstan": "v1.8.0",
+		"phpunit/phpunit": "v9.5.21"
 	},
 
 	"autoload": {
