--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
 	"license": "MIT",
 
 	"require": {
-		"php": ">=8.1",
-		"php-http/httplug": "^2.2.0"
+		"php": ">=8.1"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "1.8.0",
