--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
 		"php": ">=8.1"
 	},
 	"require-dev": {
-		"phpstan/phpstan": "1.8.0",
-		"phpunit/phpunit": "9.5.21"
+		"phpstan/phpstan": "^1.10",
+		"phpunit/phpunit": "^10.1",
+		"phpmd/phpmd": "^2.13",
+		"squizlabs/php_codesniffer": "^3.7"
 	},
 
 	"autoload": {
