--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: tar -xvf /tmp/github-actions/build.tar ./
 
       - name: PHP Unit tests
-        uses: php-actions/phpunit@debug-back-3
+        uses: php-actions/phpunit@debug-cherry-pick
         env:
           XDEBUG_MODE: cover
         with:
